# ecos-backend

./: .gitignore  Dockerfile  Makefile  README.md  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ecos_buid.yaml  tag_release.yaml
etc/: Dockerfile.migrations  alembic.ini
etc/infra/: docker-compose.yaml
etc/infra/keycloak/: realm-export.json
etc/infra/opa/: base.rego
etc/infra/openresty/: nginx.conf
etc/migrations/: env.py
etc/migrations/versions/: 2025_01_13_1855-8042b5ba0e85_create_user_table.py  2025_01_20_1835-d13bfc41e782_initial_migration.py  2025_02_01_1854-fc144c55fe98_migration_user_table_add_verification_.py  2025_02_01_1921-04eb86a566dd_migration_user_table.py  2025_02_07_0103-1242e60b6528_migration_user_table.py  2025_02_08_2244-293a860cd29d_migration_user_table.py  2025_02_11_1428-8d08e3d144ec_migration_user_table.py  2025_02_11_1717-58140e6da4f7_create_accrual_history_table.py  2025_02_11_1720-47d79bda023b_create_reception_point_table.py  2025_02_11_1721-6cf1a364f17a_create_waste_table.py  2025_02_11_1721-80ce9d83baa4_create_work_schedule_table.py  2025_02_11_1722-407f2b04c249_create_drop_off_point_waste_table.py  2025_02_12_1404-ac89ba4e124d_create_tables.py  2025_02_12_1444-054e0527f6ba_create_tables.py  2025_02_12_1515-6eda1fbeb4ca_create_tables.py  2025_02_12_1731-2c341a3ec190_create_tables.py  2025_02_12_1918-0415c5fcdc63_migration_waste_table.py  2025_02_13_2336-611d34aa9db2_migration_work_schedule_table.py  2025_02_20_1807-9b36da47b7cc_migration_waste_and_reception_poin.py  2025_03_06_1712-6826aaa0dcea_add_moderation_table.py  2025_04_09_0241-9c6639534599_initial_migration.py  2025_04_21_2113-5a09fb2c83e2_initial_migration.py  2025_04_26_1750-c1b2d7901cbc_translation_migration.py  (+4 more)
src/ecos_backend/: app.py  main.py
(+95 files in other folders)
