[project]
name = "ecos-backend"
version = "0.1.0"
authors = [
    { name = "Vadim Remezov", email = "remezov@cs.vsu.ru" },
]
description = "Back-end application for ecos project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.13.*",
    "asyncpg==0.30.*",
    "fastapi==0.115.*",
    "hatch==1.13.*",
    "sqlalchemy==2.0.*",
    "uvicorn==0.32.*",
]

[dependency-groups]
dev = [
    "pytest==8.3.*",
    "pre-commit==4.0.*",
]
lint = [
    "ruff==0.7.*",
]

[project.scripts]
run_server = "ecos_backend.main:__name__"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ecos_backend"]
